@@ -4,6 +4,7 @@
 
 Version 0.67
  x Rewritten mirror() to use File::Fetch.
+ x Rewritten unpack() to use Archive::Extract.
 
 Version 0.66
  x More comprehensive tests, remove unused code and some
